Added media query md for Header

--- a/src/components/Header/styles.css
+++ b/src/components/Header/styles.css
@@ -4,7 +4,6 @@
     justify-content: space-around;
     align-items: center;
     height: 5rem;
-    max-width: 1920px;
 }
 
 #header a {
@@ -17,4 +16,17 @@
 
 #sign-in {
     background-color: var(--background-button);
+}
+
+@media(min-width: 768px) {
+    /* md breakpoint */
+    #header {
+        padding-left: 5%;
+        padding-right: 5%;
+        justify-content: space-between;
+    }
+
+    #header a {
+        font-size: 1rem;
+    }
 }
