--- a/src/index.css
+++ b/src/index.css
@@ -23,8 +23,10 @@
 body {
     margin: 0;
     height: 100vh;
+    width: 100vw;
+    max-width: 1920px;
 
-    background-color: blue;
+    background-color: var(--background-primary);
 
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
