--- a/src/index.css
+++ b/src/index.css
@@ -3,6 +3,8 @@
     --background-primary: #FFFFFF;
     --background-button: rgb(240, 240, 240);
 
+    --text-green: rgb(5, 163, 87);
+
     /*breakpoints*/
     --sm: 576px;
     --md: 768px;
@@ -14,6 +16,8 @@
 
     /*font weight*/
     --text-bold: 700;
+
+    --global-padding: 5%;
 }
 
 * {
