Removed unused code. Fixed scroll behavior on the FoodLists

--- a/src/components/Carousel/styles.css
+++ b/src/components/Carousel/styles.css
@@ -10,6 +10,12 @@
     overflow-x: scroll;
     scroll-snap-type: x mandatory;
     scrollbar-width: none;
+
+    scroll-behavior: smooth;
+}
+
+.carousel::-webkit-scrollbar{
+    display: none;
 }
 
 @media(min-width: 768px) {
